// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Routing > initRouting() > Should check if endpoint supports an explicitly specified method 1`] = `
RoutingError({
  "message": "Endpoint assigned to get /v1/user/retrieve must support that method.",
})
`;

exports[`Routing > initRouting() > Should check if endpoint supports the method it's assigned to within DependsOnMethod 1`] = `
RoutingError({
  "message": "Endpoint assigned to post method of /v1/user must support that method.",
})
`;

exports[`Routing > initRouting() > Should prohibit DependsOnMethod for a route having explicit method 1`] = `
RoutingError({
  "message": "DependsOnMethod is not allowed for /v1/user/retrieve due to the explicitly specified get method",
})
`;

exports[`Routing > initRouting() > Should prohibit ServeStatic for a route having explicit method 1`] = `
RoutingError({
  "message": "Explicit method (get) is not allowed for /v1/user/retrieve when assigned with ServeStatic",
})
`;

exports[`Routing > initRouting() > Should prohibit nested routing within a route having explicit method 1`] = `
RoutingError({
  "message": "Nested routing is not allowed for /v1/user/retrieve due to the explicitly specified method (get)",
})
`;
